feat(update): api router and finish docs
