# docs/v2_docs.go
@@ -1,143 +1,0 @@
-// Package docs Code generated by swaggo/swag. DO NOT EDIT
-package docs
-
-import "github.com/swaggo/swag"
-
-const docTemplatev2 = `{
-    "schemes": {{ marshal .Schemes }},
-    "swagger": "2.0",
-    "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
-        "contact": {
-            "url": "https://nodebyte.host"
-        },
-        "version": "{{.Version}}"
-    },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
-    "paths": {
-        "/api/v2/metrics": {
-            "get": {
-                "description": "Get all system metrics",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "metrics"
-                ],
-                "summary": "Get all system metrics",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/v2.MetricsData"
-                        }
-                    }
-                }
-            }
-        }
-    },
-    "definitions": {
-        "v2.CPUData": {
-            "type": "object",
-            "properties": {
-                "current_frequency": {
-                    "type": "integer"
-                },
-                "frequency": {
-                    "type": "number"
-                },
-                "logical_core": {
-                    "type": "integer"
-                },
-                "physical_core": {
-                    "type": "integer"
-                }
-            }
-        },
-        "v2.DiskData": {
-            "type": "object",
-            "properties": {
-                "device": {
-                    "type": "string"
-                },
-                "free_bytes": {
-                    "type": "integer"
-                },
-                "total_bytes": {
-                    "type": "integer"
-                },
-                "usage_percent": {
-                    "type": "number"
-                }
-            }
-        },
-        "v2.HostData": {
-            "type": "object",
-            "properties": {
-                "kernel_version": {
-                    "type": "string"
-                },
-                "os": {
-                    "type": "string"
-                },
-                "platform": {
-                    "type": "string"
-                }
-            }
-        },
-        "v2.MemoryData": {
-            "type": "object",
-            "properties": {
-                "available_bytes": {
-                    "type": "integer"
-                },
-                "total_bytes": {
-                    "type": "integer"
-                },
-                "usage_percent": {
-                    "type": "number"
-                },
-                "used_bytes": {
-                    "type": "integer"
-                }
-            }
-        },
-        "v2.MetricsData": {
-            "type": "object",
-            "properties": {
-                "cpu": {
-                    "$ref": "#/definitions/v2.CPUData"
-                },
-                "disk": {
-                    "$ref": "#/definitions/v2.DiskData"
-                },
-                "host": {
-                    "$ref": "#/definitions/v2.HostData"
-                },
-                "memory": {
-                    "$ref": "#/definitions/v2.MemoryData"
-                }
-            }
-        }
-    }
-}`
-
-// SwaggerInfov2 holds exported Swagger Info so clients can modify it
-var SwaggerInfov2 = &swag.Spec{
-	Version:          "0.2.0",
-	Host:             "",
-	BasePath:         "/api/v2",
-	Schemes:          []string{},
-	Title:            "SysCapture API",
-	Description:      "OpenAPI documentation for SysCapture API",
-	InfoInstanceName: "v2",
-	SwaggerTemplate:  docTemplatev2,
-	LeftDelim:        "{{",
-	RightDelim:       "}}",
-}
-
-func init() {
-	swag.Register(SwaggerInfov2.InstanceName(), SwaggerInfov2)
-}
